--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html>
 
-<!-- <head>
-    <title>My Web Page</title>
-</head> -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Peta Data Podes</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px;
+            background-color: #c03a3a;
+            border-bottom: 2px solid #000000;
+        }
+
+        .header img {
+            width: 400px;
+            height: auto;
+        }
+
+        .header-title {
+            flex-grow: 1;
+            text-align: center;
+            font-size: 50px;
+            font-weight: bold;
+            color: #ffffff;
+        }
+    </style>
+</head>
 
 <body>
+    <div class="header">
+        <img src="HEADER PUTIH_BPS.png" alt="Logo Left">
+        <div class="header-title">PETA DATA PODES PER KECAMATAN 2024</div>
+        <img style="padding-right: 30px;" src="HEADER PUTIH_Akhlak.png" alt="Logo Right">
+        <img style="width: 80px; height: auto;" src="Logomark SE2026_Sekunder Color.png" alt="Logo Right">
+
+    </div>
     <div class='tableauPlaceholder' id='viz1733969085746' style='position: relative'><noscript><a href='#'><img
                     alt='Sheet 1 '
                     src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bo&#47;Book3_17339690660220&#47;Sheet1&#47;1_rss.png'
